Added async_payment events handling to StripeWebhookView. Now handle payment_method_types in Stripe Dashboard. Templates schema.org improvements. Build version 0.3.0a

--- a/templates/cancel.html
+++ b/templates/cancel.html
@@ -11,7 +11,7 @@
 <div class="content ">
     <section class="birdshop657 cancel">
         <h1>Try again?</h1>
-        <p>Forgot to add something to your cart? <a href="{% url 'landing' %}">Try again!</a></p>
+        <p>Forgot to add something to your cart? <a href="{% url 'landing' %}">Please try again!</a></p>
     </section>
 </div>
 
