--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,25 +1,23 @@
 {% extends "base.html" %}
 
-
 {% block extra_head %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/birdshop657/birdshop657.css' %}" >
 {% endblock extra_head %}
 
-
 {% block content %}
 {% load static %}
 {% load wagtailcore_tags wagtailimages_tags %}
-<div class="content ">
+<div class="content" >
     <div class="products {% if products|length > 1 %}grid{% endif %}">
     {% for product in products %}
-        <div class="product" {% if products|length > 1 %}style="float: left;"{% endif %}>
+        <div itemscope itemtype="https://schema.org/Product" class="product" {% if products|length > 1 %}style="float: left;"{% endif %}>
             <a href="{% pageurl product %}" >
                 {% if product.specific.image %}
                 {% image product.specific.image width-400 as 400_photo %}
                 {% image product.specific.image width-720 as 720_photo %}
                 {% image product.specific.image width-900 as 900_photo %}
-                <img srcset="{{ 400_photo.url }} 400w,
+                <img itemprop="image" srcset="{{ 400_photo.url }} 400w,
                             {{ 720_photo.url }} 720w,
                             {{ 900_photo.url }} 900w"
                     sizes="(max-width: 400px) 400px,
@@ -27,15 +25,13 @@
                             900px"
                     src="{{ 900_photo.url }}" alt="{{ 900_photo.alt }}" loading="lazy" />
                 {% endif %}
-                <h2>{{ product.title }}</h2>
+                <h2 itemprop="name">{{ product.title }}</h2>
                 {% if product.specific.search_description %}
-                <div class="search_description" >{{ product.specific.search_description|richtext }}</div>
+                <div itemprop="description" class="search_description" >{{ product.specific.search_description|richtext }}</div>
                 {% endif %}
             </a>
         </div>
     {% endfor %}
     </div>
 </div>
-
-<script src="{% static 'js/birdshop657/birdshop657.js' %}" async=""></script>
 {% endblock %}
